src/main/k8s-config/k8s-deploy.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: demo
  namespace: my-project
  labels:
    run: demo
spec:
  replicas: 2
  selector:
    matchLabels:
      run: demo
  template:
    metadata:
      labels:
        run: demo
    spec:
      containers:
      - name: demo
        image: demo:1.0
        ports:
        - containerPort: 9090
          protocol: TCP
        imagePullPolicy: IfNotPresent
        readinessProbe:
          initialDelaySeconds: 30
          failureThreshold: 3
          httpGet:
            path: /
            port: 9090
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
