src/main/k8s-config/do-k8s-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: demo
  namespace: do-myproject
  labels:
    run: demo
spec:
  ports:
  - protocol: TCP
    port: 9090
    targetPort: 9090
  selector:
    run: demo
