src/main/k8s-config/k8s-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: demo
  namespace: my-project
  labels:
    run: demo
spec:
  ports:
  - protocol: TCP
    port: 9090
    targetPort: 9090
    nodePort: 32000
  selector:
    run: demo
  type: NodePort
