src/main/k8s-config/k8s-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: my-project
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: demo.example.local
    http:
      paths:
      - path: /
        backend:
          serviceName: demo
          servicePort: 9090
